--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./cursors/pencil.png">
     <link rel="stylesheet" href="./style.css">
-    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-    <script src="https://kit.fontawesome.com/029682b453.js" crossorigin="anonymous"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script> -->
+    <script src="vue.js"></script>
+    <!-- <script src="https://kit.fontawesome.com/029682b453.js" crossorigin="anonymous"></script> -->
+    <script src="fontAwsomeKit.js"></script>
     <title>WebDraw</title>
     </head>
 <body>
